--- a/app/assets/stylesheets/debug.css
+++ b/app/assets/stylesheets/debug.css
@@ -1,3 +1,4 @@
+/*
 * { outline: 0.5px dotted              rgba(230,230,230,1) }
 * * { outline: 0.5px dotted            rgba(230,230,230,1) }
 * * * { outline: 0.5px dotted          rgba(230,230,230,1) }
@@ -6,3 +7,4 @@
 * * * * * * { outline: 0.5px solid     rgba(230,230,230,1) }
 * * * * * * * { outline: 0.5px solid   rgba(230,230,230,1) }
 * * * * * * * * { outline: 0.5px solid rgba(230,230,230,1) }
+*/
