--- a/app/views/_stylesheets.html.erb
+++ b/app/views/_stylesheets.html.erb
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/bootstrap.css">
 <link rel="stylesheet" href="/bootstrap-sketchy/bootstrap-sketchy.css">
+<%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
 <link rel="stylesheet" href="/bootstrap-icons.css">
 <link rel="stylesheet" href="/Font-Awesome/css/all.css">
 <link rel="stylesheet" href="/flatpickr.min.css">
