--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -2,3 +2,7 @@
 // @import 'bootstrap-icons/font/bootstrap-icons';
 // instead using bootstrap at app/views/_javascripts
 @import 'debug';
+
+body {
+  background-color: #f5f5f5;
+}
