--- a/app/views/layouts/application/_sidebar.html.erb
+++ b/app/views/layouts/application/_sidebar.html.erb
@@ -1,6 +1,8 @@
 <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block sidebar collapse" style="background: #f5f5f5">
   <div class="position-sticky pt-3">
-    <div class="text-center d-none d-md-block"><img src="<%= BROWN_BUCKET_HOST %>/logo-faded.png" alt="" width="122"></div>
+    <div class="text-center d-none d-md-block">
+      <img src="<%= BROWN_BUCKET_HOST %>/logo-faded.png" alt="" width="122" height="92">
+    </div>
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
       <span>&nbsp;</span>
     </h6>
