--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,13 +1,45 @@
 // @import 'bootstrap/scss/bootstrap';
 // @import 'bootstrap-icons/font/bootstrap-icons';
 // instead using bootstrap at app/views/_javascripts
-@import 'debug';
+
+/*
+#ffffff
+#fefefe
+#fdfdfd
+#fcfcfc
+#fbfbfb
+#fafafa
+#f9f9f9
+#f8f8f8
+#f7f7f7
+#f6f6f6 lighter
+#f5f5f5 base
+#dddddd darker
+#c4c4c4
+#acacac
+#939393
+#7b7b7b
+#626262
+#494949
+#313131
+#181818
+#000000
+*/
+
+//@import 'debug';
 @import 'sidebar';
 @import 'sessions';
 
-
 body {
   background-color: #f5f5f5;
+}
+
+.brown-bg-light-1 {
+  background-color: #f6f6f6;
+}
+
+.brown-bg-light-6 {
+  background-color: #fcfcfc;
 }
 
 /* dont want borders when using button_to */
@@ -21,3 +53,10 @@ body {
   border-color: transparent !important;
 }
 /* /dont want borders when using button_to */
+
+.brown-dotted {
+  background-image: linear-gradient(to right, #d534e9 50%, transparent 50%);
+  background-position: 0 1.04em;
+  background-repeat: repeat-x;
+  background-size: 6px 3px;
+}
