--- a/app/views/layouts/application/_sidebar.html.erb
+++ b/app/views/layouts/application/_sidebar.html.erb
@@ -1,13 +1,20 @@
 <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block sidebar collapse" style="background: #f5f5f5">
   <div class="position-sticky pt-3">
     <div class="text-center d-none d-md-block">
-      <img src="<%= BROWN_BUCKET_HOST %>/logo-faded.png" alt="" width="122" height="92">
+      <a href="/">
+        <img src="<%= BROWN_BUCKET_HOST %>/logo-faded.png" alt="" width="122" height="92">
+      </a>
     </div>
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
       <span>&nbsp;</span>
     </h6>
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
+
+        <%= button_to my_properties_path, class: 'btn nav-link brown-no-hover', method: :get  do %>
+          <i class="bi bi-bricks me-2"></i>
+          My Properties
+        <% end %>
 
         <%= button_to my_settings_path, class: 'btn nav-link brown-no-hover', method: :get  do %>
           <i class="bi bi-gear me-2"></i>
