--- a/app/views/my_properties/index.html.erb
+++ b/app/views/my_properties/index.html.erb
@@ -33,7 +33,7 @@
           <% else %>
             <p class="card-text fs-6 text-reset fw-normal">
               Get started by supplying your <%= BROWN_ZAIBATSU %> and
-              DocuSign credentials at <a href="/" class="text-decoration-none brown-dotted">My Settings</a>
+              DocuSign credentials at <a href="/my_settings" class="text-decoration-none brown-dotted">My Settings</a>
     	  </p>
           <% end %>
         </div>
