Trying out contetMenu plugin

--- a/app/views/_stylesheets.html.erb
+++ b/app/views/_stylesheets.html.erb
@@ -4,3 +4,5 @@
 <link rel="stylesheet" href="/bootstrap-icons.css">
 <link rel="stylesheet" href="/Font-Awesome/css/all.css">
 <link rel="stylesheet" href="/flatpickr.min.css">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-contextmenu/2.7.1/jquery.contextMenu.min.css">
