--- a/app/views/_javascripts.html.erb
+++ b/app/views/_javascripts.html.erb
@@ -1,3 +1,6 @@
 <script src="/jquery-3.6.0.min.js"></script>
 <script src="/bootstrap.bundle.js"></script>
 <script src="/flatpickr.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-contextmenu/2.7.1/jquery.contextMenu.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-contextmenu/2.7.1/jquery.ui.position.js"></script>
